compiler/test/conformance/testdata/errors/12_interp_no_to_str.yz
Person : {
    name String
    age  Int
}

main : {
    p : Person("Alice", 30)
    print("User: ${p}")
}
